--- a/VSWork/xnh_new_2/ApiMonitor/pages/xnhdz.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/xnhdz.html
@@ -166,13 +166,13 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <div class="text-muted bootstrap-admin-box-title">本地His药品目录</div>
-                        <button type="button" class="btn btn-default" onclick="javascript:wdm();">未对照</button> 
-                        <button type="button" class="btn btn-default" onclick="javascript:ydm();">已对照</button>
-                        <button type="button" class="btn btn-default" onclick="javascript:yp();">药品</button>
-                        <button type="button" class="btn btn-default" onclick="javascript:zl();">诊疗</button>
-                    </div>
+                    <div class=" panel-heading">
+                    <div class="text-muted bootstrap-admin-box-title" style="background:rgba(66, 139, 202, 0.4);color:rgb(50,50,50)">本地His药品目录</div>
+                    <button type="button" class="btn btn-default" onclick="javascript:wdm();">未对照</button>
+                    <button type="button" class="btn btn-default" onclick="javascript:ydm();">已对照</button>
+                    <button type="button" class="btn btn-default" onclick="javascript:yp();">药品</button>
+                    <button type="button" class="btn btn-default" onclick="javascript:zl();">诊疗</button>
+                </div>
                     <div class="bootstrap-admin-panel-content">
                         <div class="form-inline" role="form">
                             <div class="form-group">
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <p></p>
-                        <table class="table table-striped table-bordered" id="bdhis" style="font-size :10px">
+                        <table class="table table-striped table-bordered" id="bdhis" style="font-size :7.5px">
                             <thead>
                                 <tr>
                                     <th>his编码</th>
@@ -229,7 +229,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <div class="text-muted bootstrap-admin-box-title">农合中心药品目录   </div>
+                        <div class="text-muted bootstrap-admin-box-title" style="background:rgba(66, 139, 202, 0.4);color:rgb(50,50,50)">农合中心药品目录   </div>
                     </div>
                    
                     <div class="bootstrap-admin-panel-content">
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                         <p></p>
-                        <table class="table table-striped table-bordered" id="nhsj" style= "font-size: 10px;">
+                        <table class="table table-striped table-bordered" id="nhsj" style= "font-size: 8px;">
                            
                             <thead>
                                 <tr>
