--- a/VSWork/xnh_new_2/ApiMonitor/pages/czlp.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/czlp.html
@@ -370,9 +370,9 @@
                             }
 
                         },
-                        error: function (err) {
+                        error: function (XMLHttpRequest, textStatus, errorThrown) {
                             closeMask();
-                            alert(err.toString());
+                            alert(textStatus + ":" + errorThrown);
                         }
                     });
                 }
