--- a/VSWork/xnh_new_2/ApiMonitor/pages/rydj.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/rydj.html
@@ -120,7 +120,8 @@
     </head>
 <body class="bootstrap-admin-with-small-navbar" onload="checkLogin();">
     <!--读卡驱动-->
-    <object classid=clsid:8A5B3626-40FC-4563-AF78-C9C4AC2ECFD6 width=0 height=0 align="center" id="CIccardCtrl" hspace=0 vspace=0></object>
+    <object codebase='HDICCardCtrl.ocx' classid=clsid:0390FA98-2A13-479A-B94C-F37FD58FE88C width=0 height=0 align='center' id='CHDICCardCtr3' hspace=0 vspace=0></object>
+    <object codebase='nhcard.CAB' classid=clsid:3B47C665-2482-4528-99F0-F40EC0289C6E width=0 height=0 align='center' id='HD4442' hspace=0 vspace=0></object>
 
     <div id="mask_background"></div>
     <div id="mask_content"></div>
