--- a/VSWork/xnh_new_2/ApiMonitor/pages/zyfpprint1.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/zyfpprint1.html
@@ -65,54 +65,54 @@
         </tr>
         <tr>
             <td><p align="left">年龄 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D504_06"></span></p></td>
             <td><p align="left">就医医疗机构 </p></td>
-            <td><p align="left"><span id="D504_28"></span> </p></td>
+            <td><p align="left"><span id="D101_02"></span> </p></td>
             <td><p align="left">医院级别 </p></td>
-            <td><p align="left"><span id="D504_28"></span> </p></td>
+            <td><p align="left"><span id="ITEM_NAME"></span> </p></td>
         </tr>
         <tr>
             <td><p align="left">住院号 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D504_09"></span></p></td>
             <td><p align="left">出院诊断 </p></td>
-            <td><p align="left"><span id="D504_28"></span> </p></td>
+            <td><p align="left"><span id="DIAGNOSIS_NAME"></span> </p></td>
             <td><p align="left">补偿类型 </p></td>
-            <td><p align="left"><span id="D504_28"></span> </p></td>
+            <td><p align="left"><span id="BCLX"></span> </p></td>
         </tr>
         <tr>
             <td><p align="left">入院时间 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D504_11"></span></p></td>
             <td><p align="left">出院时间 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D504_12"></span></p></td>
             <td><p align="left">住院天数 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D504_13"></span></p></td>
         </tr>
         <tr>
             <td><p align="left">总费用 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D506_03"></span></p></td>
             <td><p align="left">起付线 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="BEGINPAY"></span></p></td>
             <td><p align="left">补偿比例 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="BZBL"></span></p></td>
         </tr>
         <tr>
             <td><p align="left">补偿金额 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="BZHJ"></span></p></td>
             <td><p align="left">补偿金额(大写)</p></td>
-            <td><p align="left"><span id="D504_28"></span> </p></td>
+            <td><p align="left"><span id="BZHJ_DX"></span> </p></td>
             <td><p align="left">自付金额 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="GRFD"></span></p></td>
         </tr>
         <tr>
             <td colspan="6"><p align="center">本年累计补偿情况 </p></td>
         </tr>
         <tr>
             <td><p align="left">住院次数 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="D404_17"></span></p></td>
             <td><p align="left">医药费用 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="ZFYHJ"></span></p></td>
             <td><p align="left">补偿金额 </p></td>
-            <td><p align="left"><span id="D504_28"></span></p></td>
+            <td><p align="left"><span id="BCFYHJ"></span></p></td>
         </tr>
         <tr>
             <td colspan="3"><p align="left">经办人(签字)： </p></td>
